Fix margin spacing
fixed margin spacing for person profile

--- a/style.css
+++ b/style.css
@@ -154,7 +154,7 @@ svg {
 .person-container p {
   font-size: 14px;
   font-weight: 500;
-  margin-bottom: 6px;
+  margin-bottom: 4px;
 }
 
 .person-container h3 {
